<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="movie">Movie</string>
    <string name="tvshow">Tv Show</string>

    <string name="txt_detail">Detail</string>
    <string name="txt_title">Title</string>
    <string name="txt_year">Year Released</string>
    <string name="txt_overview">Overview</string>
    <string name="txt_share">Share</string>
</resources>